package org.gabriel.patterns.factory_method.model;

/**
 * @author daohn on 12/12/2020
 * @project design-pattern-course
 */
public class TextMessage extends Message {
    @Override public String getContent() {
        return "";
    }
}
